update/buildingBaseStyle.css
@font-face {
    font-family: 'My Font';
    src: url('DidactGothic-Regular.ttf') format('truetype');
  }

   body {
    overflow: hidden;
    
  }  

  #box{
    border: 4px solid;
    padding: 20px; 
    width: 33%;
    resize: horizontal;
    writing-mode: horizontal-tb;
    overflow: auto;
    position:relative;
    writing-mode: horizontal-tb;
    left:-23%;
    top:-52%;
    color: lightgray;
    height: 32%;
    /* z-index:20; */
  }

#afterSlot{
  position:relative;
  border: 2px solid;
  top: -56%;
  width: 10%;
  left: 21%;
  transform: translate(0, -50%);
  color: lightgray;
  z-index: 6;
}

#beforeSlot{
  position:relative;
  border: 2px solid;
  top: -56%;
  width: 10%;
  color: lightgray;
  right: 38%;
}

